fix for table style and add for cv detail

--- a/big job/field.html
+++ b/big job/field.html
@@ -23,6 +23,7 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/markdown.css" />
+<link rel="stylesheet" type="text/css" href="css/commonused.css" />
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 <script type="text/JavaScript">
 <!--
@@ -84,13 +85,13 @@ function MM_nbGroup(event, grpName) { //v6.0
 <img src="img/mygif1.gif" width="350px" height="150px" />
 </div><br />
 <div id="category">
-<table border="0" cellpadding="0" cellspacing="0" align="center">
-  <tr>
-    <td width="150" align="center"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
-    <td width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
+<table border="0" cellpadding="0" cellspacing="0" align="center" class="contents">
+  <tr class="contents">
+    <td  class="contents" width="150" align="center"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
+    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
   </tr>
 </table>
 </div><br />
@@ -100,6 +101,28 @@ function MM_nbGroup(event, grpName) { //v6.0
   </ul>
 </nav>
 <br />
-
+<div id="cv">
+<table  class="contents">
+<tr class="contents">
+<td width="500px" height="270px"  class="contents">
+<img src="img/cv-1.jpg" width="480px" height="270px" />
+</td>
+<td width="500px" height="270px" align="left" style="text-align:left;"  class="contents">
+<p>
+计算机视觉是一门研究如何使机器“看”的科学，更进一步的说，就是指用摄影机和计算机代替人眼对目标进行识别、跟踪和测量等机器视觉，并进一步做图像处理，用计算机处理成为更适合人眼观察或传送给仪器检测的图像。
+</p>
+<p>
+作为一个工程学科，计算机视觉寻求基于相关理论与模型来创建计算机视觉系统。这类系统的组成部分包括：
+<ol>
+<li>过程控制（例如工业机器人和无人驾驶汽车）</li>
+<li>事件监测（例如图像监测）</li>
+<li>信息组织（例如图像数据库和图像序列的索引创建）</li>
+<li>物体与环境建模（例如工业检查，医学图像分析和拓扑建模）</li>
+<li>交感互动（例如人机互动的输入设备）</li>
+</ol>
+</p>
+</td>
+</tr></table>
+</div>
 </body>
 </html>
