--- a/big job/index.html
+++ b/big job/index.html
@@ -23,6 +23,7 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/markdown.css" />
+<link rel="stylesheet" type="text/css" href="css/commonused.css" />
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 <script type="text/JavaScript">
 <!--
@@ -84,13 +85,13 @@ function MM_nbGroup(event, grpName) { //v6.0
 <img src="img/mygif1.gif" width="350px" height="150px" />
 </div><br />
 <div id="category">
-<table border="0" cellpadding="0" cellspacing="0" align="center">
-  <tr>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
-    <td width="150" align="center"><a href="field.html" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
-    <td width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
-    <td width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
+<table class="contents" border="0" cellpadding="0" cellspacing="0" align="center">
+  <tr class="contents">
+    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
+    <td class="contents" width="150" align="center"><a href="field.html" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
+    <td class="contents" width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
   </tr>
 </table>
 </div><br /><br />
@@ -106,7 +107,7 @@ function MM_nbGroup(event, grpName) { //v6.0
 </div>
 <div  id='write'  class = 'is-node show-fences-line-number'>
 <h2><a name='header-n126' class='md-header-anchor '></a>人工智能的发展历史</h2>
-<figure><table><thead><tr><th>年代</th><th>20世纪40年代</th><th>20世纪50年代</th><th>20世纪60年代</th><th>20世纪70年代</th><th>20世纪80年代</th><th>20世纪90年代</th><th>21世纪00年代</th></tr></thead><tbody><tr><td>计算机</td><td>1945 计算机（ENIAC）</td><td>1957 FORTRAN语言</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>人工智能研究</td><td>&nbsp;</td><td>1953 博弈论 1956 达特茅斯会议</td><td>&nbsp;</td><td>1977 知识工程宣言</td><td>1982 第五代电脑计划开始</td><td>1991 人工神经网络 1995 SVM</td><td>2006 深度学习</td></tr><tr><td>人工智能语言</td><td>&nbsp;</td><td>&nbsp;</td><td>1960 LISP语言</td><td>1973 PROLOG语言</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>知识表达</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1973 生产系统 1976 框架理论</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>专家系统</td><td>&nbsp;</td><td>&nbsp;</td><td>1965 DENDRAL</td><td>1975 MYCIN</td><td>1980 Xcon</td><td>&nbsp;</td><td>&nbsp;</td></tr></tbody></table></figure>
+<figure><table class="common"><thead><tr><th>年代</th><th>20世纪40年代</th><th>20世纪50年代</th><th>20世纪60年代</th><th>20世纪70年代</th><th>20世纪80年代</th><th>20世纪90年代</th><th>21世纪00年代</th></tr></thead><tbody><tr><td>计算机</td><td>1945 计算机（ENIAC）</td><td>1957 FORTRAN语言</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>人工智能研究</td><td>&nbsp;</td><td>1953 博弈论 1956 达特茅斯会议</td><td>&nbsp;</td><td>1977 知识工程宣言</td><td>1982 第五代电脑计划开始</td><td>1991 人工神经网络 1995 SVM</td><td>2006 深度学习</td></tr><tr><td>人工智能语言</td><td>&nbsp;</td><td>&nbsp;</td><td>1960 LISP语言</td><td>1973 PROLOG语言</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>知识表达</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1973 生产系统 1976 框架理论</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>专家系统</td><td>&nbsp;</td><td>&nbsp;</td><td>1965 DENDRAL</td><td>1975 MYCIN</td><td>1980 Xcon</td><td>&nbsp;</td><td>&nbsp;</td></tr></tbody></table></figure>
 <p align="left">详见<a href='https://en.wikipedia.org/wiki/History_of_artificial_intelligence'>维基百科</a>.</p><p>&nbsp;</p>
 </div>
 </body>
