--- a/big job/field.html
+++ b/big job/field.html
@@ -29,6 +29,7 @@
 <!--
 function MM_preloadImages() { //v3.0	
   document.getElementById("cvcontent").hidden = "hidden";	
+  document.getElementById("Imagecontent").hidden = true;
   var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
     var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
     if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
@@ -84,6 +85,12 @@ function loadCVContent() {
 function hideCVContent() {
 	document.getElementById("cvcontent").hidden = true;	
 }
+function loadImageContent() {
+	document.getElementById("Imagecontent").hidden = false;	
+}
+function hideImageContent() {
+	document.getElementById("Imagecontent").hidden = true;	
+}
 </script>
 </head>
 
@@ -131,6 +138,22 @@ function hideCVContent() {
 <li>交感互动（例如人机互动的输入设备）</li>
 </ol>
 </p></div>
+</td>
+</tr></table>
+</div><br />
+<div id="imagerecog" onmouseover="loadImageContent()" onMouseOut="hideImageContent()">
+<table class="contents">
+<tr class="contents">
+<td width="500px" height="280px" align="left" style="text-align:left;"  class="contents">
+<div id="Imagecontent">
+<p>
+<font size="+1">
+<a href="https://baike.baidu.com/item/%E5%9B%BE%E5%83%8F%E8%AF%86%E5%88%AB" target="_blank"><b><font color="#FF0B0F">图像识别</font></b></a>
+，是指利用计算机对图像进行处理、分析和理解，以识别各种不同模式的目标和对像的技术。一般工业使用中，采用工业相机拍摄图片，然后再利用软件根据图片灰阶差做进一步识别处理，图像识别软件国外代表的有康耐视等，国内代表的有图智能等。另外在地理学中指将遥感图像进行分类的技术。</font>
+</p></div>
+</td>
+<td width="500px" height="280px"  class="contents" valign="middle">
+<img src="img/imagerecognition-1.jpg" width="495px" height="260px" />
 </td>
 </tr></table>
 </div>
