--- a/big job/cvnews.html
+++ b/big job/cvnews.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="utf-8">
-<title>主页</title>
+<title>学科领域</title>
 <style>
 .body {
 	margin: 0 auto;
@@ -27,7 +27,9 @@
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 <script type="text/JavaScript">
 <!--
-function MM_preloadImages() { //v3.0
+function MM_preloadImages() { //v3.0	
+  document.getElementById("cvcontent").hidden = "hidden";	
+  document.getElementById("Imagecontent").hidden = true;
   var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
     var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
     if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
@@ -85,30 +87,22 @@ function MM_nbGroup(event, grpName) { //v6.0
 <img src="img/mygif1.gif" width="350px" height="150px" />
 </div><br />
 <div id="category">
-<table class="contents" border="0" cellpadding="0" cellspacing="0" align="center">
+<table border="0" cellpadding="0" cellspacing="0" align="center" class="contents">
   <tr class="contents">
-    <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
+    <td  class="contents" width="150" align="center"><a href="index.html" target="_top" onClick="MM_nbGroup('down','group1','shouye','category/shouye_down.jpg',1)" onMouseOver="MM_nbGroup('over','shouye','category/shouye_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img src="category/shouye.jpg" alt="" name="shouye" width="70" height="34" border="0" onload=""></a></td>
     <td class="contents" width="150" align="center"><a href="field.html" target="_top" onClick="MM_nbGroup('down','group1','xuekelingyu','category/xuekelingyu_down.jpg',1)" onMouseOver="MM_nbGroup('over','xuekelingyu','category/xuekelingyu_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="xuekelingyu" src="category/xuekelingyu.jpg" border="0" alt="" onLoad=""></a></td>
     <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','chanyechengguo','category/chanyechengguo_down.jpg',1)" onMouseOver="MM_nbGroup('over','chanyechengguo','category/chanyechengguo_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="chanyechengguo" src="category/chanyechengguo.jpg" border="0" alt="" onLoad=""></a></td>
     <td class="contents" width="150" align="center"><a href="#" target="_top" onClick="MM_nbGroup('down','group1','yingshizuopin','category/yingshizuopin_down.jpg',1)" onMouseOver="MM_nbGroup('over','yingshizuopin','category/yingshizuopin_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="yingshizuopin" src="category/yingshizuopin.jpg" border="0" alt="" onLoad=""></a></td>
     <td class="contents" width="150" align="center"><a href="aboutus.html" target="_top" onClick="MM_nbGroup('down','group1','guanyuwomen','category/guanyuwomen_down.jpg',1)" onMouseOver="MM_nbGroup('over','guanyuwomen','category/guanyuwomen_over.jpg','',1)" onMouseOut="MM_nbGroup('out')"><img name="guanyuwomen" src="category/guanyuwomen.jpg" border="0" alt="" onLoad=""></a></td>
   </tr>
 </table>
-</div><br /><br />
-<div class="jumbotron" align="left">
-<div class="injumbotron">
-  <h1>欢迎关注人工智能</h1>
-  <p><b>人工智能</b>（Artificial Intelligence, <b>AI</b>）亦称<b>机器智能</b>，是指由人制造出来的机器所表现出来的智能。通常人工智能是指通过普通计算机程序的手段实现的人类智能技术。</p>
-  <p><a class="btn btn-primary btn-lg" href="https://en.wikipedia.org/wiki/Artificial_intelligence" role="button" target="_blank">了解更多</a></p>
-</div></div><br />
-<h2>A Brief History of Artificial Intelligence </h2>
-<div class="embed-responsive embed-responsive-16by9">	
-  <iframe class="embed-responsive-item" src="video/A Brief History of Artificial Intelligence.mp4"></iframe>
-</div>
-<div  id='write'  class = 'is-node show-fences-line-number'>
-<h2><a name='header-n126' class='md-header-anchor '></a>人工智能的发展历史</h2>
-<figure><table class="common"><thead><tr><th>年代</th><th>20世纪40年代</th><th>20世纪50年代</th><th>20世纪60年代</th><th>20世纪70年代</th><th>20世纪80年代</th><th>20世纪90年代</th><th>21世纪00年代</th></tr></thead><tbody><tr><td>计算机</td><td>1945 计算机（ENIAC）</td><td>1957 FORTRAN语言</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>人工智能研究</td><td>&nbsp;</td><td>1953 博弈论 1956 达特茅斯会议</td><td>&nbsp;</td><td>1977 知识工程宣言</td><td>1982 第五代电脑计划开始</td><td>1991 人工神经网络 1995 SVM</td><td>2006 深度学习</td></tr><tr><td>人工智能语言</td><td>&nbsp;</td><td>&nbsp;</td><td>1960 LISP语言</td><td>1973 PROLOG语言</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>知识表达</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1973 生产系统 1976 框架理论</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>专家系统</td><td>&nbsp;</td><td>&nbsp;</td><td>1965 DENDRAL</td><td>1975 MYCIN</td><td>1980 Xcon</td><td>&nbsp;</td><td>&nbsp;</td></tr></tbody></table></figure>
-<p align="left">详见<a href='https://en.wikipedia.org/wiki/History_of_artificial_intelligence'>维基百科</a>.</p><p>&nbsp;</p>
-</div>
+</div><br />
+<nav aria-label="领域分类">
+  <ul class="pager">
+    <li class="previous"><a href="field.html"><span aria-hidden="true">&larr;</span> 学科领域</a></li>
+  </ul>
+</nav>
+<br />
+
 </body>
 </html>
