succeed to import image recogition news

--- a/big job/field.html
+++ b/big job/field.html
@@ -160,7 +160,7 @@ function changeCVImage(num) {
 </p></div>
 </td>
 <td width="500px" height="280px"  class="contents" valign="middle">
-<img src="img/imagerecognition-1.jpg" width="495px" height="260px" />
+<a href="imagerecognition.html"><img src="img/imagerecognition-1.jpg" width="495px" height="260px" /></a>
 </td>
 </tr></table>
 </div>
