do some style modify in image recognition page

--- a/big job/cvnews.html
+++ b/big job/cvnews.html
@@ -104,6 +104,7 @@ function MM_nbGroup(event, grpName) { //v6.0
 </nav>
 <br />
 <div align="left">
+<div  id='write'  class = 'is-node show-fences-line-number'>
 <h1 align="center">GluonCV — 计算机视觉的深度学习工具包</h1>
 <p align="center">本文作者：奕欣 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;   <font color="#B0B0B0">2018-04-29 08:20</font></p>
 <p>&nbsp;</p><p>雷锋网<font color="#F38D28">(公众号：雷锋网)</font> AI 科技评论按：本文首发于 ApacheMxNet，作者李沐， AI 科技评论获作者授权转载，经不改动原意的编辑。</p>
@@ -122,6 +123,6 @@ function MM_nbGroup(event, grpName) { //v6.0
 <br />
 <h3><a name='header-n200' class='md-header-anchor '></a><font color="#E50003">项目在哪里</font></h3>
 <p>GluonCV 发布在 <a href='http://gluon-cv.mxnet.io/'><font color="#F38D28">http://gluon-cv.mxnet.io</font></a>。目前我们发布了第一个预览版本，其中主要包括了三个模型，均可以重复论文结果</p><ul><li>图片识别：在 ImageNet 上训练 ResNet</li><li>物体检测：在 Pascal VOC 上训练 SSD</li><li>语义分割：在 Pascal VOC 上训练 FCN</li></ul><p>自然我们会在接下来的版本里不断加入新的模型。如果对哪些模型特别感兴趣，请原文链接给我们留言。</p>
-</div>
+</div></div>
 </body>
 </html>
