--- a/big job/field.html
+++ b/big job/field.html
@@ -30,6 +30,8 @@
 function MM_preloadImages() { //v3.0	
   document.getElementById("cvcontent").hidden = "hidden";	
   document.getElementById("Imagecontent").hidden = true;
+  document.getElementById("ircontent").hidden = "hidden";
+  document.getElementById("nlpcontent").hidden = "hidden";
   var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
     var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
     if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
@@ -97,6 +99,12 @@ function loadIRContent() {
 function hideIRContent() {
 	document.getElementById("ircontent").hidden = true;	
 }
+function loadNLPContent() {
+	document.getElementById("nlpcontent").hidden = false;	
+}
+function hideNLPContent() {
+	document.getElementById("nlpcontent").hidden = true;	
+}
 function changeCVImage(num) {
 	if (num == 0) {
 		document.getElementById("CVImageSrc").src = "img/cv-2.png";
@@ -116,6 +124,13 @@ function changeIRImage(num) {
 		document.getElementById("IRImageSrc").src = "img/IR-2.png";
 	} else {
 		document.getElementById("IRImageSrc").src = "img/IR-1.jpg";
+	}
+}
+function changeNLPImage(num) {
+	if (num == 0) {
+		document.getElementById("NLPImageSrc").src = "img/nlp-2.png";
+	} else {
+		document.getElementById("NLPImageSrc").src = "img/nlp-1.jpg";
 	}
 }
 </script>
@@ -188,7 +203,7 @@ function changeIRImage(num) {
 <table class="contents">
 <tr class="contents">
 <td width="500px" height="320px"  class="contents" valign="middle" onMouseOver="changeIRImage(0)" onMouseOut="changeIRImage(1)">
-<a href="#"><img src="img/IR-1.jpg" width="495px" height="300px" id="IRImageSrc"/></a>
+<a href="irnews.html"><img src="img/IR-1.jpg" width="495px" height="300px" id="IRImageSrc"/></a>
 </td>
 <td width="500px" height="320px" align="left" style="text-align:left;"  class="contents">
 <div id="ircontent">
@@ -199,5 +214,20 @@ function changeIRImage(num) {
 </td>
 </tr></table>
 </div><br />
+<div id="nlp" onmouseover="loadNLPContent()" onMouseOut="hideNLPContent()">
+<table class="contents">
+<tr class="contents">
+<td width="500px" height="320px" align="left" style="text-align:left;"  class="contents">
+<div id="nlpcontent">
+<p>
+<a href="https://baike.baidu.com/item/%E8%87%AA%E7%84%B6%E8%AF%AD%E8%A8%80%E5%A4%84%E7%90%86" target="_blank"><b><font color="#FF0B0F">自然语言处理</font></b></a>(natural language processing)是计算机科学领域与人工智能领域中的一个重要方向。它研究能实现人与计算机之间用自然语言进行有效通信的各种理论和方法。自然语言处理是一门融语言学、计算机科学、数学于一体的科学。因此，这一领域的研究将涉及自然语言，即人们日常使用的语言，所以它与语言学的研究有着密切的联系，但又有重要的区别。自然语言处理并不是一般地研究自然语言，而在于研制能有效地实现自然语言通信的计算机系统，特别是其中的软件系统。因而它是计算机科学的一部分。
+</p>
+</div>
+</td>
+<td width="500px" height="320px"  class="contents" valign="middle" onMouseOver="changeNLPImage(0)" onMouseOut="changeNLPImage(1)">
+<a href="#"><img src="img/nlp-1.jpg" width="495px" height="300px" id="NLPImageSrc"/></a>
+</td>
+</tr></table>
+</div>
 </body>
 </html>
