add for nlp news page

--- a/big job/field.html
+++ b/big job/field.html
@@ -225,7 +225,7 @@ function changeNLPImage(num) {
 </div>
 </td>
 <td width="500px" height="320px"  class="contents" valign="middle" onMouseOver="changeNLPImage(0)" onMouseOut="changeNLPImage(1)">
-<a href="#"><img src="img/nlp-1.jpg" width="495px" height="300px" id="NLPImageSrc"/></a>
+<a href="nlpnews.html"><img src="img/nlp-1.jpg" width="495px" height="300px" id="NLPImageSrc"/></a>
 </td>
 </tr></table>
 </div>
